syntax = "proto3";

package sea.api.date;
import "google/protobuf/descriptor.proto";

option go_package = "github.com/kaydxh/sea/api/openapi-spec/date;date";

service DateService {
  // 生成当前时间
  rpc Now(NowRequest) returns (NowResponse) {};
}

message NowRequest {
  string request_id = 1 [json_name = "RequestId"];  //请求ID
}

message NowResponse {
  string request_id = 1 [json_name = "RequestId"];  // 请求ID
  string date = 2 [json_name = "Date"];             //当前时间
}

